--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activities.LoginActivity">
-<data>
+    tools:context=".activities.ForgetPasswordActivity">
 
-</data>
+    <data>
+
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/ic_wave">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageView7"
             android:layout_width="@dimen/_160sdp"
             android:layout_height="@dimen/_160sdp"
-            android:layout_marginTop="@dimen/_100sdp"
+            android:layout_marginTop="@dimen/_50sdp"
             android:background="@mipmap/logo_foreground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
@@ -32,82 +33,75 @@
             android:textColor="@color/teal_700"
             android:textSize="@dimen/_24sdp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView" />
+            app:layout_constraintBottom_toBottomOf="@+id/imageView7" />
+
+        <TextView
+            android:id="@+id/tv_fgt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+
+            android:paddingTop="@dimen/_45sdp"
+            android:text="Enter your email that we will send OTP!"
+
+            android:textColor="#000000"
+            android:textSize="@dimen/_13sdp"
+           android:gravity="center"
+
+            app:layout_constraintBottom_toTopOf="@+id/et_email_login1"
+            app:layout_constraintTop_toBottomOf="@+id/imageView7"
+            app:layout_constraintStart_toStartOf="@+id/et_email_login1"
+            app:layout_constraintEnd_toEndOf="@id/btn_send"
+
+            tools:ignore="MissingConstraints">
+
+        </TextView>
 
         <EditText
-            android:id="@+id/et_email_login"
+            android:id="@+id/et_email_login1"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
             android:layout_marginStart="@dimen/_28sdp"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_30sdp"
             android:layout_marginEnd="@dimen/_28sdp"
             android:background="@drawable/grey_background_edittext"
             android:ems="10"
             android:hint="Enter your email"
             android:inputType="textEmailAddress"
-            android:maxLength="100"
-            android:maxLines="1"
-            android:paddingStart="@dimen/_15sdp"
+            android:padding="@dimen/_10sdp"
             android:textColor="#858585"
-            android:textSize="@dimen/_15sdp"
+            android:textSize="@dimen/_16sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintBottom_toTopOf="@+id/btn_send"
+            android:layout_marginBottom="@dimen/_45sdp"
+            />
 
-
-        <EditText
-            android:id="@+id/et_password_login"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_40sdp"
-            android:layout_marginStart="@dimen/_28sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_28sdp"
-            android:background="@drawable/grey_background_edittext"
-            android:ems="10"
-            android:hint="Enter your password"
-            android:inputType="textPassword"
-            android:maxLength="100"
-            android:maxLines="1"
-            android:paddingStart="@dimen/_15sdp"
-            android:textColor="#858585"
-            android:textSize="@dimen/_15sdp"
-            app:layout_constraintTop_toBottomOf="@+id/et_email_login" />
 
         <TextView
-            android:id="@+id/fgt_pass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_12sdp"
-            android:layout_marginEnd="@dimen/_28sdp"
-            android:text="Forgot your password?"
-            android:textAlignment="viewEnd"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_password_login" />
-
-        <TextView
-            android:id="@+id/btn_login"
+            android:id="@+id/btn_send"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_50sdp"
             android:layout_marginStart="@dimen/_40sdp"
-            android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_40sdp"
             android:background="@drawable/startbutton"
             android:gravity="center"
-            android:text="Login"
+            android:text="Send"
             android:textColor="@color/white"
             android:textSize="@dimen/_25sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fgt_pass" />
+            tools:layout_editor_absoluteY="477dp"
+            tools:ignore="MissingConstraints" />
 
         <TextView
-            android:id="@+id/linkToSignUp"
+            android:id="@+id/backtologin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_20sdp"
-            android:text="Don't have an account? Sign up here!!"
+            android:text="Back to Login!"
             android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_send" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
