--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activities.ProductActivity">
     <data>
 
     </data>
@@ -17,7 +17,7 @@
             android:id="@+id/cstn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".activities.ProductActivity">
+           >
 
             <LinearLayout
                 android:id="@+id/line1"
